--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,13 +20,18 @@ html, body {
   max-width: 960px;
   height: 100%;
   margin: 0 auto;
-  padding: 10px;
+  padding: 10px 0;
   background-color: #fff;
   border-left: 1px solid #DDDDDD;
   border-right: 1px solid #DDDDDD;
   box-shadow: 0 0 15px #DDDDDD;
+  overflow: scroll;
 
-  .card {
+  section {
+    margin: 0 10px 30px;
+  }
+
+  section.card {
     border: 1px solid #e5e5e5;
     border-radius: 4px;
 
@@ -65,6 +70,7 @@ html, body {
     }
 
     .card-body {
+
       .media {
         display: flex;
         padding: 20px;
@@ -99,9 +105,20 @@ html, body {
     }
   }
 
-  .chart-form {
-    margin: 20px 0;
+  .page-footer {
+    display: block;
+    position: fixed;
+    margin: 0;
+    padding: 10px;
+    bottom: 0;
+    height: 55px;
+    width: 100%;
+    max-width: 958px;
+    background-color: #fff;
+    border-top: 1px solid #DDDDDD;
+  }
 
+  .chart-form {
     .input-group {
       display: flex;
     }
